--- a/Test/Grains/Orleans.Providers.MongoDB.Test.Grains.csproj
+++ b/Test/Grains/Orleans.Providers.MongoDB.Test.Grains.csproj
@@ -1,20 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="3.4.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Orleans.Core" Version="3.4.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Orleans.Core" Version="4.0.0-preview1" />
+		<PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="4.0.0-preview1" />
+		<PackageReference Include="Microsoft.Orleans.Sdk" Version="4.0.0-preview1" />
+		<PackageReference Include="Microsoft.Orleans.Streaming" Version="4.0.0-preview1" />
+		<PackageReference Include="Microsoft.Orleans.Streaming.Abstractions" Version="4.0.0-preview1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\GrainInterfaces\Orleans.Providers.MongoDB.Test.GrainInterfaces.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\GrainInterfaces\Orleans.Providers.MongoDB.Test.GrainInterfaces.csproj" />
+	</ItemGroup>
 
 </Project>
