--- a/Test/Host/Orleans.Providers.MongoDB.Test.Host.csproj
+++ b/Test/Host/Orleans.Providers.MongoDB.Test.Host.csproj
@@ -6,13 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0-preview.7.21377.19" />
-    <PackageReference Include="Microsoft.Orleans.OrleansProviders" Version="3.4.3" />
-    <PackageReference Include="Microsoft.Orleans.OrleansRuntime" Version="3.4.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Core" Version="4.0.0-preview1" />
+    <PackageReference Include="Microsoft.Orleans.OrleansRuntime" Version="4.0.0-preview1" />
+    <PackageReference Include="Microsoft.Orleans.Sdk" Version="4.0.0-preview1" />
+    <PackageReference Include="Microsoft.Orleans.Server" Version="4.0.0-preview1" />
+    <PackageReference Include="Microsoft.Orleans.TestingHost" Version="4.0.0-preview1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Orleans.Providers.MongoDB\Orleans.Providers.MongoDB.csproj" />
+    <ProjectReference Include="..\GrainInterfaces\Orleans.Providers.MongoDB.Test.GrainInterfaces.csproj" />
     <ProjectReference Include="..\Grains\Orleans.Providers.MongoDB.Test.Grains.csproj" />
   </ItemGroup>
 
